--- a/main.html
+++ b/main.html
@@ -17,6 +17,10 @@
         <div class="text">从前有座山,山里有座庙,庙里有个老和尚给小和尚讲故事:从前有座山,山里有座庙,庙里有个老和尚给小和尚讲故事:从前</div>
         <div class="icon1"></div>
         <div class="icon2"></div>
+        <div class="tags">
+            <div class="tag1">290560933</div>
+            <div class="tag2">BTPTTENG</div>
+        </div>
     </div>
     <div class = "right"></div>
 </div>
