--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="main.css" type="text/css" rel="stylesheet"/>
-    <meta name="viewpoint" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta name="viewpoint" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
 
 </head>
 <body>
@@ -21,6 +21,7 @@
             <div class="tag1">290560933</div>
             <div class="tag2">BTPTTENG</div>
         </div>
+
     </div>
     <div class = "right"></div>
 </div>
